UI/FIX: Registration form width overflow on smaller screens

--- a/frontend/src/components/views/Home/Registration/styles.module.scss
+++ b/frontend/src/components/views/Home/Registration/styles.module.scss
@@ -4,6 +4,7 @@
   background-color: white;
   padding: 10px 15px;
   margin-left: auto;
+  max-width: 100%;
 
   h1 {
     font-weight: bold;
